<resources>
    <string name="app_name" translatable="false">Food Check</string>
    <string name="food_name">Food name</string>
    <string name="last_ate">Last ate:</string>
    <string name="nutrValues100g">Nutritional Values in 100g:</string>
    <string name="energy">Energy</string>
    <string name="fat">Fat</string>
    <string name="saturates">of which saturates</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="sugars">of which sugars</string>
    <string name="protein">Protein</string>
    <string name="salt">Salt</string>
    <string name="food_image">Food Image</string>
    <string name="scan_product">Scan Product</string>
    <string name="scanning">Scanning…</string>
    <string name="barcode">Barcode</string>
    <string name="weight">Weight</string>
    <string name="fibre">Fibre</string>
    <string name="error_occurred">Error occurred</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="g">g</string>
    <string name="just_scanned">You\'ve just scanned:</string>
    <string name="back">Back</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="scan_history">Scan history</string>
    <string name="fav_products">Favorite products</string>
    <string name="progress">Progress</string>
    <string name="recommend_friend">Recommend to a friend!</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="need_camera_permission">This app needs Camera permission!</string>
    <string name="grant_permission">Grant permission</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="other">Other</string>
    <string name="profile_picture">Profile picture</string>
    <string name="ask_before_del">Ask before record deletion</string>
    <string name="data_saved">Data saved!</string>
    <string name="try_app">Try new app for scanning food and keeping diet! Download FoodCheck:</string>
    <string name="choose_app">Choose an application</string>
    <string name="placeholder">placeholder</string>
    <string name="logout_successful">Logout successful!</string>
    <string name="default_date" translatable="false">0000-00-00</string>
    <string name="product_image">Product image</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="product_name">Product name</string>
    <string name="kcal">kcal</string>
    <string name="imgLoadFailed">Image loading failed!</string>
    <string name="scan_deleted">Scan deleted</string>
    <string name="are_you_sure_want_to_delete">Are you sure you want to delete this item?</string>
    <string name="confirm_deletion">Confirm deletion</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="favorite_removed">Favorite removed!</string>
    <string name="no_internet_connection">No Internet connection!</string>
    <string name="turn_on_wifi">Turn on WiFi</string>
    <string name="turn_on_mobile_data">Turn on mobile data</string>
    <string name="cancel">Cancel</string>
    <string name="account_settings">Account settings</string>
    <string name="calories_alert_per_day">Calories alert (per day)</string>
    <string-array name="sort_by">
        <item name="by_days">By days</item>
        <item name="by_months">By months</item>
        <item name="by years">By years</item>
    </string-array>
    <string name="sort_by_days">Sort by days</string>
    <string name="sort_by_months">Sort by months</string>
    <string name="sort_by_years">Sort by years</string>
    <string name="show">Show</string>
    <string name="sort_by">Sort by:</string>
    <string name="refresh">Refresh</string>
    <string name="calories">Calories</string>
    <string name="saturates_only">Saturates</string>
    <string name="sugars_only">Sugars</string>
    <string name="dates">Dates</string>
    <string name="consumption_by_dates">consumption by dates</string>
    <string name="no_data_to_show">No data to show!</string>
    <string name="guest">Guest</string>
    <string name="no_product_found">Product not found in the database!</string>
    <string name="add_new_product_manually_question">Do you want to add product manually?</string>
    <string name="save_scan">Save scan</string>
    <string name="add_photo">Add photo</string>
    <string name="if_not_given">0, if not given</string>
    <string name="send_email_using">Send email using…</string>
    <string name="scan_added">Scan added!</string>
    <string name="add_to_official_database">Do you want to send email to request adding the product to official database?</string>
    <string name="send_without_changing">PLEASE SEND THIS EMAIL WITHOUT CHANGING</string>
    <string name="image_not_picked">Image not picked!</string>
    <string name="no_email_clients_installed">No email clients installed.</string>
    <string name="percent_eaten">Percent of product eaten</string>
    <string name="fill_weight_first">Fill weight first</string>
    <string name="show_calories_progress">Show calories progress</string>
    <string name="calories_limit">Set calories limit</string>
    <string name="calories_exceeded_alert">Calories limit exceeded alert</string>
    <string name="hide">Hide</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="all_fields_must_be_filled">All fields must be filled!</string>
    <string name="channel_name" translatable="false">calories_meter_channel</string>
    <string name="channel_description">Channel used for showing calories meter notifications</string>
    <string name="calories_exceeded">You\'ve exceeded your calories limit!</string>
    <string name="drop_cookies">Drop the cookies!</string>
    <string name="eaten_food_percentage">Eaten food percentage</string>
    <string name="adjust_eaten_product_amount">Please adjust eaten product amount</string>
    <string name="percentage">Percentage:</string>
    <string name="_100percent" translatable="false">100%</string>
    <string name="eatenNutrValues">Eaten nutritional values</string>
    <string name="from_gallery">From gallery</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="ok">OK</string>
    <string name="never">Never</string>
    <string name="report_issue">Report issue</string>
    <string name="send">Send</string>
    <string name="after_click_send">After clicking the \"send\" button, you will be redirected to your email app. That way inform developer about issue that you encountered</string>
    <string name="report_content">Please provide as much information as you can about the issue you encountered. Especially what was your app path before issue appeared. Please write us also your phone model and OS version. Thank you! You can also attach screenshots of this issue.</string>
    <string name="add_new_scan_button">Add new scan button</string>
    <string name="permission_granted">Permission granted</string>
    <string name="need_storage_permission">Need permission to write and read files!</string>
    <string name="permission_not_granted">Permission denied!</string>
    <string name="pref_lang_key" translatable="false">pref_lang_key</string>
    <string name="pref_lang_label">Choose app language</string>
    <string name="english" translatable="false">English</string>
    <string name="polski" translatable="false">polski</string>
    <string name="deutsch" translatable="false">Deutsch</string>
    <string name="russkij" translatable="false">русский</string>
    <string name="undo">Undo</string>
    <string name="food_ate_again">Did you eat that product again?</string>
    <string name="delete">DELETE</string>
    <string name="recycle_bin_icon">Recycle bin icon</string>
    <string name="generate">Generate</string>
    <string name="congratulations">Congratulations!</string>
    <string name="goal_achieved">You\'ve achieved the goal!</string>
    <string name="keep_going">Keep going!</string>
    <string name="full_cat_image">Full cat image</string>
    <string name="close">Close</string>
    <string name="click_generate">Click \"generate\" button!</string>
    <string name="food_quote">“Cakes are healthy too, you just eat a small slice.” ― Mary Berry</string>
    <string name="login">Login</string>
    <string name="number_of_scans">Number of scans:</string>
    <string name="last_scan">Last scan:</string>
    <string name="no_scans">No scans!</string>
    <string name="calories_progress">Calories progress</string>
    <string name="calories_eaten">Calories eaten:</string>
    <string name="home_key" translatable="false">home_key</string>
    <string name="pref_home_key" translatable="false">pref_home_key</string>
    <string name="pref_home_label">Preffered home page</string>
    <string name="past_key" translatable="false">past_key</string>
    <string name="progress_key" translatable="false">progress_key</string>
    <string name="fav_key" translatable="false">fav_key</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="wrong_dates">Wrong input dates!</string>
    <string name="error">Error happened!</string>
    <string name="first_key" translatable="false">first_key</string>
    <string name="last_key" translatable="false">last_key</string>
    <string name="pref_sort_key" translatable="false">pref_sort_key</string>
    <string name="sort_products">Sort products list</string>
    <string name="from_last">From last</string>
    <string name="from_first">From first</string>
</resources>
