<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="show_calories_progress"
        android:summaryOff="@string/hide"
        android:summaryOn="@string/show"
        android:title="@string/show_calories_progress" />

    <SeekBarPreference
        android:defaultValue="2000"
        android:key="calories_limit"
        android:max="10000"
        android:min="0"
        android:title="@string/calories_limit" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="calories_exceeded_alert"
        android:summaryOff="@string/off"
        android:summaryOn="@string/on"
        android:title="@string/calories_exceeded_alert" />
</PreferenceScreen>