<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="10dp">

    <RelativeLayout
        android:id="@+id/past_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_card_red">

        <ImageView
            android:id="@+id/delete_image_left"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/recycle_bin_icon"
            android:src="@drawable/ic_baseline_delete_24_white" />

        <TextView
            android:id="@+id/text_delete_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/delete_image_left"
            android:text="@string/delete"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/delete_image_right"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/recycle_bin_icon"
            android:src="@drawable/ic_baseline_delete_24_white" />

        <TextView
            android:id="@+id/text_delete_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/delete_image_right"
            android:text="@string/delete"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/past_foreground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_card_white"
        android:paddingHorizontal="5dp"
        android:paddingVertical="5dp">

        <RelativeLayout
            android:id="@+id/dateNameRelLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/datePastScans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/productNamePast"
                android:text="@string/default_date"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/hourTextViewPast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/productNamePast"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/datePastScans"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/productNamePast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="15dp"
                android:text="@string/product_name"
                android:textSize="17sp"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/favButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/favorite_button"
                android:src="@drawable/ic_favorite_full" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dateNameRelLayout"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/productImagePast"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="1">

            <RelativeLayout
                android:id="@+id/nutValuesRelLayoutLeft"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <TextView
                    android:id="@+id/nutValues"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eatenNutrValues"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/energyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/nutValues"
                    android:text="@string/energy"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/fatTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/energyTextView"
                    android:text="@string/fat"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/saturatesTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/fatTextView"
                    android:text="@string/saturates"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/nutValuesRelLayoutRight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="0.5">

                <TextView
                    android:id="@+id/carbohydratesTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/carbohydrates"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/sugarsPastTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/carbohydratesTextView"
                    android:text="@string/sugars"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/proteinPastTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sugarsPastTextView"
                    android:text="@string/protein"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/saltPastTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/proteinPastTextView"
                    android:text="@string/salt"
                    android:textSize="12sp" />
            </RelativeLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/productImagePast"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_below="@id/dateNameRelLayout"
            android:layout_margin="10dp"
            android:contentDescription="@string/product_image"
            android:src="@mipmap/ic_launcher" />
    </RelativeLayout>


</androidx.cardview.widget.CardView>