<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_after"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundYellow"
    tools:context=".AfterScanActivity">


    <RelativeLayout
        android:id="@+id/titleRelLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/justScannedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/just_scanned"
            android:textSize="25sp" />

        <Button
            android:id="@+id/favoriteButton"
            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:background="@color/buttonColor"
            android:drawableLeft="@drawable/ic_favorite_full" />

        <TextView
            android:id="@+id/productNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/justScannedTextView"
            android:text="@string/food_name"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/weightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/productNameTextView"

            android:text="@string/weight"
            android:textSize="19sp" />



        <TextView
            android:id="@+id/barcodeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/weightTextView"
            android:text="@string/barcode" />

        <TextView
            android:id="@+id/barcodeResultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/productNameTextView"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/barcodeTextView" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/imgRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleRelLayout">

        <ImageView
            android:id="@+id/productImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/food_image"
            android:src="@mipmap/ic_launcher" />

        <ProgressBar
            android:id="@+id/imageProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/valuesRelLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgRelativeLayout">

        <TextView
            android:id="@+id/in100gTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nutrValues100g"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/energyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/in100gTextView"
            android:text="@string/energy"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/energyResultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/in100gTextView"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/energyTextView"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fatTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/energyTextView"
            android:text="@string/fat"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fatResultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/energyTextView"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/fatTextView"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/saturatesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fatTextView"
            android:text="@string/saturates"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/saturatesResultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fatTextView"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/saturatesTextView"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/carbohydratesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/saturatesTextView"
            android:text="@string/carbohydrates"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/carbohydratesResultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/saturatesTextView"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/carbohydratesTextView"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/sugarsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/carbohydratesTextView"
            android:text="@string/sugars"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/sugarsResultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/carbohydratesTextView"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/sugarsTextView"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fibreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sugarsTextView"
            android:text="@string/fibre"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fibreResultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sugarsTextView"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/fibreTextView"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/proteinTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fibreTextView"
            android:text="@string/protein"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/proteinResultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fibreTextView"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/proteinTextView"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/saltTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/proteinTextView"
            android:text="@string/salt"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/saltResultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/proteinTextView"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/saltTextView"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/buttonsRelLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp">

        <Button
            android:id="@+id/saveButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:background="@color/buttonColor"
            android:drawableEnd="@drawable/ic_save_green"
            android:text="@string/save"
            android:textColor="#FFFFFF" />


        <Button
            android:id="@+id/discardButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:background="@color/buttonColor"
            android:drawableEnd="@drawable/ic_cancel"
            android:text="@string/discard"
            android:textColor="#FFFFFF" />
    </RelativeLayout>
</RelativeLayout>

