<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundYellow"
    android:padding="20dp">


    <TextView
        android:id="@+id/scanningTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scanning" />

    <EditText
        android:id="@+id/barcodeEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scanningTextView"
        android:autofillHints="5904730161183"
        android:hint="@string/barcode"
        android:inputType="number" />

    <Button
        android:id="@+id/scanBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@color/buttonColor"
        android:text="@string/scan_product" />

</RelativeLayout>